err/greptools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/greptools'...
Compiling './lib/python3.5/site-packages/greptools/base.py'...
***   File "./lib/python3.5/site-packages/greptools/base.py", line 41
    print "=== CLI args ==="
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/greptools/greptree.py'...
***   File "./lib/python3.5/site-packages/greptools/greptree.py", line 93
    print "%s type found: %s" % (type(val), val)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greptools/publisher.py'...
***   File "./lib/python3.5/site-packages/greptools/publisher.py", line 37
    print "Total found: %d" % tree._count
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/greptools/reader'...
Compiling './lib/python3.5/site-packages/greptools/reader/reader.py'...
***   File "./lib/python3.5/site-packages/greptools/reader/reader.py", line 9
    print "=== \033[91mWarn: %s\033[0m ===\n" % str(msg)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/greptools/searcher.py'...
***   File "./lib/python3.5/site-packages/greptools/searcher.py", line 71
    print "=== Grep command ==="
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/greptools/test'...
Compiling './lib/python3.5/site-packages/greptools/test/test_reader.py'...
***   File "./lib/python3.5/site-packages/greptools/test/test_reader.py", line 81
    print self.br.get_context(file_name, 3)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/greptools-0.9b1.egg-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
